<resources>
    <string name="app_name">LollibotApp</string>
    <string name="battery_level_text">Battery level</string>
    <string name="battery_level_value_initial">0\%</string>
    <string name="estimated_lifetime_text">Estimated lifetime</string>
    <string name="estimated_lifetime_value_initial">0h 0min</string>
    <string name="connection_text">Connection</string>
    <string name="connection_value_initial">Disconnected</string>
    <string name="current_operation_text">Current operation</string>
    <string name="current_operation_value_initial">Idle</string>
    <string name="override_button_text">Override</string>
    <string name="schedule_today_date_text">Today (%1$s)</string>
    <string name="schedule_items_text_plural">%1$s scheduled runs</string>
    <string name="schedule_items_text_singular">%1$s scheduled run</string>
    <string name="run_start_text">Start</string>
    <string name="run_end_text">End</string>
    <string name="set_date">SET DATE</string>
    <string name="add_run">ADD RUN</string>
    <string name="move">Move lines</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="resume_schedule">Resume schedule</string>
    <string name="shutdown">Shutdown</string>
    <string name="status">Status</string>
    <string name="zero">0</string>
    <string name="no_of_lines">Number of lines</string>
    <string name="infinity">∞</string>
    <string name="lifetime">%1$s hour(s) %2$s minute(s)</string>
</resources>
