<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:rowCount="4"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/battery_level_text"/>

            <TextView
                android:id="@+id/battery_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/battery_level_value_initial"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/estimated_lifetime_text"/>

            <TextView
                android:id="@+id/estimated_lifetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/estimated_lifetime_value_initial"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/connection_text"/>

            <TextView
                android:id="@+id/connection_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_row="2"
                android:layout_column="1"
                android:text="@string/connection_value_initial"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_row="3"
                android:layout_column="0"
                android:text="@string/current_operation_text"/>

            <TextView
                android:id="@+id/current_operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_row="3"
                android:layout_column="1"
                android:text="@string/current_operation_value_initial"/>

        </GridLayout>

        <Button
            android:id="@+id/override_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="openOverride"
            android:text="@string/override_button_text"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>